# specsoloist

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IDEAS.md  IMPROVEMENTS.md  LICENSE  PROPOSALS.md  QUINE_RESULT.md  QUINE_RESULTS.md  README.md  ROADMAP.md  SKILLS.md  arrangement.example.yaml  demo.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.claude/: settings.local.json
.claude-plugin/: plugin.json
.claude/agents/: compose.md  conductor.md  respec.md  soloist.md
.devcontainer/: devcontainer.json
.gemini/: settings.json
.gemini/agents/: compose.md  conductor.md  fix.md  respec.md  soloist.md
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  quine.yaml  spec-drift.yaml
arrangements/: arrangement.typescript.yaml
concepts/self_healing/: index.html
concepts/spec_as_source/: index.html
database-patterns/: index.html
decisions/: 01-sp-perform.md  02-ui-spec-agnosticism.md
docker/: sandbox.Dockerfile  specsoloist.Dockerfile
docs/: database-patterns.md  e2e-testing.md  getting_started.md  incremental-adoption.md  index.md
docs/concepts/: self_healing.md  spec_as_source.md
docs/examples/: fasthtml_incremental.md  math_demo.md  ml_demo.md  ts_demo.md
docs/guide/: agents.md  arrangement.md  workflow.md
docs/reference/: api.md  cli.md  internals.md  spec-types.md  template.md
e2e-testing/: index.html
examples/fasthtml_app/: README.md  arrangement.yaml  index.html  pyproject.toml
examples/fasthtml_app/specs/: app.spec.md  db.spec.md  e2e_todos.spec.md  fasthtml_interface.spec.md  fastlite_interface.spec.md  layout.spec.md  routes.spec.md  routes_db.spec.md  state.spec.md
examples/fasthtml_incremental/: README.md  arrangement.yaml  index.html
examples/math/: arrangement.yaml  factorial.spec.md  is_prime.spec.md  math_demo.spec.md  math_orchestrator.spec.md  math_utils.spec.md  math_workflow.spec.md  pyproject.toml  user.spec.md
examples/math_demo/: index.html
examples/ml_demo/: README.md  index.html  requirements.txt  train.py
examples/nextjs_ai_chat/: README.md  arrangement.yaml  index.html
examples/ts_demo/: index.html
examples/user_project/: README.md
getting_started/: index.html
guide/agents/: index.html
guide/arrangement/: index.html
guide/workflow/: index.html
incremental-adoption/: index.html
prototypes/v1/: compiler.py  llm_build.yaml
prototypes/v2_mcp/: README.md  core.py  server.py  test_core.py
reference/api/: index.html
reference/cli/: index.html
reference/internals/: index.html
reference/spec-types/: index.html
reference/template/: index.html
score/: arrangement.spec.md  arrangement.yaml  build_diff.spec.md  build_state.spec.md  cli.spec.md  compiler.spec.md  composer.spec.md  conductor.spec.md  config.spec.md  core.spec.md  events.spec.md  manifest.spec.md  parser.spec.md  quine_diff.spec.md  resolver.spec.md  respec.spec.md  runner.spec.md  schema.spec.md  server.spec.md  spec_diff.spec.md  spec_format.spec.md  speccomposer.spec.md  specconductor.spec.md  spechestra.spec.md  specsoloist.spec.md  tui.spec.md  ui.spec.md
score/examples/: is_prime.spec.md  user.spec.md
scripts/: conduct_ts_demo.sh
search/: search_index.json
self_hosting/: spec_format.spec.md  speccomposer.spec.md  specconductor.spec.md  spechestra.spec.md  specsoloist.spec.md  specular_core.spec.md  ui.spec.md
site/: 404.html  index.html  objects.inv
src/: math_demo.spec.md  math_orchestrator.spec.md  quine_diff.spec.md
tasks/: 03-validate-fasthtml-example.md  04-reference-spec-type.md  05-arrangement-dependencies-field.md  06-fasthtml-app-refactor.md  07-validate-nextjs-ai-chat.md  08-arrangement-templates.md  09-e2e-testing-pattern.md  10-conduct-resume-flag.md  11-arrangement-env-vars.md  12-nested-session-detection.md  13-incremental-adoption-guide.md  14-database-persistence-patterns.md  15-sp-diff.md  16-quiet-json-flags.md  17-model-pinning.md  18-quine-ci.md  19-sp-vibe.md  20-pydantic-ai-provider.md  21-quine-refresh.md  22-sp-schema.md  22-spec-diff-score-spec.md  23-sp-help-topics.md  24-init-templates-and-skills.md  25-static-artifacts.md  27-event-bus.md  28-wire-event-emission.md  29-provider-token-tracking.md  30-ndjson-subscriber.md  31-tui-dashboard.md  32-sse-server.md  33-task-format-skill.md  34-ndjson-replay.md  35-directory-based-spec-discovery.md  36-external-dependency-declaration.md  37-diff-all-default.md  38-tui-startup-feedback.md  39-tui-file-viewer.md  HISTORY.md  HK-02-small-fixes.md  HK-04-conductor-writes-config-files.md  (+25 more)
tests/: test_agent_definitions.py  test_arrangement.py  test_build_diff.py  test_build_state.py  test_cli_doctor_status.py  test_cli_help.py  test_cli_init.py  test_cli_permissions.py  test_cli_schema.py  test_cli_test_all.py  test_conduct_resume.py  test_core.py  test_env_vars.py  test_event_emission.py  test_events.py  test_examples_build.py  test_file_viewer.py  test_manifest.py  test_model_pinning.py  test_ndjson_replay.py  test_ndjson_subscriber.py  test_nested_session.py  test_parser.py  test_provider_token_tracking.py  test_pydantic_ai_provider.py  test_quiet_json_flags.py  test_reference_spec.py  test_requires.py  test_resolver.py  test_spec_diff.py  test_spechestra.py  test_sse_server.py  test_static_artifacts.py  test_tui.py  test_verify.py  test_vibe.py
tombstone/: README.md  pyproject.toml
tombstone/src/specular/: __init__.py
(+108 files in other folders)
