[project]
name = "specular-ai"
version = "0.2.1"
description = "MOVED: This package has been renamed to 'specsoloist'."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Toby Lightheart", email = "code@symbolfarm.com" }
]
dependencies = [
    "specsoloist>=0.2.0",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Code Generators",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specular"]
