[project]
name = "fasthtml-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-fasthtml>=0.12",
    "pytest>=7.0",
    "httpx>=0.24",       # required by starlette TestClient
    "pytest-playwright>=0.5",
    "requests>=2.28",    # used by live_server fixture to poll readiness
]
